# justscript

./: .gitignore  Cargo.toml  GlowJS.sln  readme.md
GlowJS/: GlowJS.vcxproj  GlowJS.vcxproj.filters  glowjs.c  glowjs.h  glowparser.c  glowparser.h  main.c
example/: lex_example.rs  main.rs
src/: lib.rs  main.rs
src/core/: lib.rs  load.rs
src/core/syntax/: lexer.rs  position.rs  token.rs
src/core/syntax/ast/: keyword.rs  mod.rs  token.rs
src/errors/: mod.rs
src/interpreter/: instruction.rs
src/lexer/: cursor.rs  mod.rs  token.rs
src/parse/: lexer.rs  mod.rs  parser.rs  sess.rs
src/runtime/: value.rs
src/syntax/: ast.rs  cursor.rs  diagnostic.rs  errors.rs  lexer.rs  mod.rs  parser.rs  punctuator.rs  sess.rs  span.rs  token.rs
src/syntax/parse/: ast.rs  keyword.rs  lexer.rs  mod.rs  parser.rs  position.rs
src/tests/: mod.rs
src/vm/: executor.rs  mod.rs
tests/: test_lexer.rs
