[package]
name = "justscript"
version = "0.1.0"
authors = ["JunWang <1103870790@qq.com>"]
edition = "2018"
default-run = "justscript_example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "justscript"
path = "src/core/lib.rs"

[[bin]]
name = "justscript_example"
path = "src/main.rs"

[dependencies]
