[package]
name = "justscript"
version = "0.1.0"
authors = ["JunWang <1103870790@qq.com>"]
edition = "2018"
default-run = "justscript_example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "justscript"
path = "src/lib.rs"

[[bin]]
name = "justscript_example"
path = "example/main.rs"

[dependencies]
byteorder = "1.3.2"
regex = "1.3.3"
unicode-xid = "0.2.0"